fix: remove <a> wrapper on restaurant image, move lang switcher to header

--- a/index.html
+++ b/index.html
@@ -813,17 +813,12 @@
                         了解更多 →
                     </a>
                 </div>
-                <!-- Make image clickable too -->
-                <a href="synapse_os.html" class="split-img"
-                    style="background: #eef2f5; display: flex; align-items: center; justify-content: center; flex-direction: column; overflow: hidden; border-radius: 20px; cursor: pointer; text-decoration: none;">
-                    <div style="width: 100%; height: 100%; background: #f9f9f9; display: flex; align-items: center; justify-content: center; overflow: hidden; border-radius: 20px;">
-                        <img src="assets/images/restaurant.webp" alt="Restaurant"
-                            style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.6s cubic-bezier(0.25, 1, 0.5, 1);"
-                            onmouseenter="this.style.transform='scale(1.08)'"
-                            onmouseleave="this.style.transform='scale(1)'"
-                            loading="lazy">
+                <div class="split-img" style="background: transparent; padding: 0; overflow: hidden;">
+                    <div
+                        style="width: 100%; height: 100%; background: #f9f9f9; display: flex; align-items: center; justify-content: center; overflow: hidden; border-radius: 20px;">
+                        <img src="assets/images/restaurant.webp" alt="Restaurant" style="width: 100%; height: 100%; object-fit: cover;" loading="lazy">
                     </div>
-                </a>
+                </div>
             </div>
         </div>
     </section>
