--- a/index.html
+++ b/index.html
@@ -816,7 +816,7 @@
                 <div class="split-img" style="background: transparent; padding: 0; overflow: hidden;">
                     <div
                         style="width: 100%; height: 100%; background: #f9f9f9; display: flex; align-items: center; justify-content: center; overflow: hidden; border-radius: 20px;">
-                        <img src="assets/images/restaurant.webp" alt="Restaurant" style="width: 100%; height: 100%; object-fit: cover;" loading="lazy">
+                        <img src="assets/images/restaurant.jpg" alt="Restaurant" style="width: 100%; height: 100%; object-fit: cover;" loading="lazy">
                     </div>
                 </div>
             </div>
