fix: move lang switcher into nav-links, add cache-busting, fix scrollbar
- Switcher now injects into .nav-links (not .nav-inner) to keep 2-child flex layout
- Added overflow-x:hidden to body to prevent horizontal scrollbar
- Added .nav-links { display:flex; align-items:center } for proper inline layout
- Added ?v=2 cache-busting to shared.css and i18n.js across all 8 HTML pages
  (forces desktop browsers to load updated files instead of cached globe version)

--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <meta name="format-detection" content="telephone=no">
     <title>Panshaker Services</title>
     <link rel="icon" type="image/png" href="assets/images/logo-transparent.png">
-    <link rel="stylesheet" href="assets/styles/shared.css">
+    <link rel="stylesheet" href="assets/styles/shared.css?v=2">
     <style>
         /* 全局样式 - 补充页面自定义 */
         body {
@@ -414,7 +414,7 @@
     </footer>
 
     <script src="js/device.js"></script>
-    <script src="js/i18n.js"></script>
+    <script src="js/i18n.js?v=2"></script>
 </body>
 
 </html>
