--- a/profile_unknown.html
+++ b/profile_unknown.html
@@ -7,7 +7,7 @@
     <meta name="format-detection" content="telephone=no">
     <title>unknown | 管理团队 | Panshaker Services</title>
     <link rel="icon" type="image/png" href="assets/images/logo-transparent.png">
-    <link rel="stylesheet" href="assets/styles/shared.css">
+    <link rel="stylesheet" href="assets/styles/shared.css?v=2">
     <!-- Same styles as others -->
     <style>
         /* --- 字体定义 --- */
@@ -309,7 +309,7 @@
     </footer>
 
     <script src="js/device.js"></script>
-    <script src="js/i18n.js"></script>
+    <script src="js/i18n.js?v=2"></script>
 </body>
 
 </html>
