--- a/careers.html
+++ b/careers.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>Panshaker Services</title>
     <link rel="icon" type="image/png" href="assets/images/logo-transparent.png">
-    <link rel="stylesheet" href="assets/styles/shared.css">
+    <link rel="stylesheet" href="assets/styles/shared.css?v=2">
     <style>
         body {
             color: #0E427E;
@@ -514,7 +514,7 @@
     </footer>
 
     <script src="js/device.js"></script>
-    <script src="js/i18n.js"></script>
+    <script src="js/i18n.js?v=2"></script>
 </body>
 
 </html>
