--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="format-detection" content="telephone=no">
     <title>Panshaker Services</title>
     <link rel="icon" type="image/png" href="assets/images/logo-transparent.png">
-    <link rel="stylesheet" href="assets/styles/shared.css">
+    <link rel="stylesheet" href="assets/styles/shared.css?v=2">
     <style>
         /* 布局容器 */
         .container {
@@ -917,7 +917,7 @@
     </footer>
 
     <script src="js/device.js"></script>
-    <script src="js/i18n.js"></script>
+    <script src="js/i18n.js?v=2"></script>
 </body>
 
 </html>
