--- a/investors.html
+++ b/investors.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, viewport-fit=cover">
     <title>Panshaker Services</title>
     <link rel="icon" type="image/png" href="assets/images/logo-transparent.png">
-    <link rel="stylesheet" href="assets/styles/shared.css">
+    <link rel="stylesheet" href="assets/styles/shared.css?v=2">
     <!-- Same styles -->
     <style>
         @font-face {
@@ -276,7 +276,7 @@
         });
     </script>
     <script src="js/device.js"></script>
-    <script src="js/i18n.js"></script>
+    <script src="js/i18n.js?v=2"></script>
 </body>
 
 </html>
