--- a/synapse_os.html
+++ b/synapse_os.html
@@ -1830,7 +1830,7 @@
     </script>
 
     <script src="js/device.js"></script>
-    <script src="js/i18n.js"></script>
+    <script src="js/i18n.js?v=2"></script>
 </body>
 
 </html>
