fix: add proper favicon files (16/32/48px + apple-touch-icon)
- Generated favicon.ico (16/32/48px multi-size) from logo-transparent.png
- Generated favicon-16x16.png, favicon-32x32.png, apple-touch-icon.png (180px), favicon-192x192.png
- Replaced oversized 1080x1080 PNG link with proper multi-format favicon tags
- All 8 HTML pages now have: .ico, 32px PNG, 16px PNG, apple-touch-icon
- Previous 1080x1080 PNG was too large for browsers to use as tab icon

--- a/synapse_os.html
+++ b/synapse_os.html
@@ -5,7 +5,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, viewport-fit=cover">
     <title>Panshaker Services</title>
-    <link rel="icon" type="image/png" href="assets/images/logo-transparent.png">
+    <link rel="icon" href="favicon.ico" sizes="48x48">
+    <link rel="icon" type="image/png" href="assets/images/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="assets/images/favicon-16x16.png" sizes="16x16">
+    <link rel="apple-touch-icon" href="assets/images/apple-touch-icon.png">
     <!-- Fonts -->
     <style>
         @font-face {
