--- a/profile_unknown.html
+++ b/profile_unknown.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, viewport-fit=cover">
     <meta name="format-detection" content="telephone=no">
     <title>unknown | 管理团队 | Panshaker Services</title>
-    <link rel="icon" type="image/png" href="assets/images/logo-transparent.png">
+    <link rel="icon" href="favicon.ico" sizes="48x48">
+    <link rel="icon" type="image/png" href="assets/images/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="assets/images/favicon-16x16.png" sizes="16x16">
+    <link rel="apple-touch-icon" href="assets/images/apple-touch-icon.png">
     <link rel="stylesheet" href="assets/styles/shared.css?v=2">
     <!-- Same styles as others -->
     <style>
