--- a/careers.html
+++ b/careers.html
@@ -43,6 +43,14 @@
             z-index: -1;
         }
 
+        .page-banner h1 {
+            font-family: 'MyBrandFont', sans-serif;
+            font-size: 48px;
+            font-weight: normal;
+            margin-bottom: 20px;
+            letter-spacing: 2px;
+        }
+
         .hero-content h1 {
             font-size: 64px;
             font-weight: 200;
@@ -52,6 +60,13 @@
 
         .hero-content h1 strong {
             font-weight: 700;
+        }
+
+        .info-card h3 {
+            font-size: 32px;
+            color: #111;
+            margin-bottom: 40px;
+            font-weight: 300;
         }
 
         .hero-content p {
@@ -157,6 +172,14 @@
             border-radius: 20px;
             box-shadow: 0 10px 30px rgba(0, 0, 0, 0.03);
             margin-top: 40px;
+        }
+
+        .stat-number {
+            font-size: 44px;
+            font-weight: 700;
+            color: #d32f2f;
+            /* 小龙虾红 */
+            margin-bottom: 10px;
         }
 
         .brand-logo {
@@ -407,42 +430,54 @@
 
     <section class="section" style="padding-top: 150px; background: #fafafa;">
         <div class="container">
-            <h1 data-i18n="careers.heading" style="text-align: center; font-size: 48px; font-weight: 300; margin-bottom: 60px; color: #0E427E;">Join
+            <h1 data-i18n="careers.heading"
+                style="text-align: center; font-size: 36px; font-weight: 300; margin-bottom: 60px; color: #0E427E;">Join
                 Our Team</h1>
 
             <div class="job-card"
                 style="background: #fff; padding: 40px; border-radius: 12px; box-shadow: 0 4px 20px rgba(0,0,0,0.05); max-width: 900px; margin: 0 auto;">
                 <div class="job-header"
                     style="margin-bottom: 30px; border-bottom: 1px solid #eee; padding-bottom: 20px;">
-                    <h2 data-i18n="careers.role.title" style="font-size: 32px; color: #0E427E; margin-bottom: 10px;">Lead Field Service Technician</h2>
+                    <h2 data-i18n="careers.role.title" style="font-size: 32px; color: #0E427E; margin-bottom: 10px;">
+                        Lead Field Service Technician</h2>
                     <p style="font-size: 18px; color: #666; display: flex; flex-wrap: wrap; gap: 20px;">
-                        <span data-i18n="careers.role.location"><strong style="color:#333;">Location:</strong> Seattle, WA</span>
-                        <span data-i18n="careers.role.salary"><strong style="color:#333;">Salary:</strong> $79,000 - $98,800 a year</span>
+                        <span data-i18n="careers.role.location"><strong style="color:#333;">Location:</strong> Seattle,
+                            WA</span>
+                        <span data-i18n="careers.role.salary"><strong style="color:#333;">Salary:</strong> $79,000 -
+                            $98,800 a year</span>
                         <span data-i18n="careers.role.type"><strong style="color:#333;">Type:</strong> Full-time</span>
                     </p>
                 </div>
 
                 <div class="job-description" style="margin-bottom: 40px;">
-                    <h3 data-i18n="careers.role.overview_title" style="font-size: 20px; color: #333; margin-bottom: 15px;">Role Overview</h3>
-                    <p data-i18n="careers.role.overview_desc" style="color: #666; margin-bottom: 20px; font-size: 16px;">
+                    <h3 data-i18n="careers.role.overview_title"
+                        style="font-size: 20px; color: #333; margin-bottom: 15px;">Role Overview</h3>
+                    <p data-i18n="careers.role.overview_desc"
+                        style="color: #666; margin-bottom: 20px; font-size: 16px;">
                         Panshaker Services is seeking a dedicated Lead Field Service Technician to ensure the
                         reliability of our automated culinary systems. You will be responsible for the installation,
                         maintenance, and repair of our cutting-edge robotic wok hardware at client sites.
                         <strong>Valid work authorization in the US is required.</strong>
                     </p>
 
-                    <h3 data-i18n="careers.role.resp_title" style="font-size: 20px; color: #333; margin-bottom: 15px;">Key Responsibilities</h3>
+                    <h3 data-i18n="careers.role.resp_title" style="font-size: 20px; color: #333; margin-bottom: 15px;">
+                        Key Responsibilities</h3>
                     <ul style="list-style: disc; margin-left: 20px; color: #666; margin-bottom: 20px; font-size: 16px;">
-                        <li data-i18n="careers.role.resp_1">Perform on-site installation, commissioning, and maintenance of Panshaker automated cooking
+                        <li data-i18n="careers.role.resp_1">Perform on-site installation, commissioning, and maintenance
+                            of Panshaker automated cooking
                             units.</li>
-                        <li data-i18n="careers.role.resp_2">Diagnose technical issues and perform repairs to minimize downtime.</li>
-                        <li data-i18n="careers.role.resp_3">Provide training and technical support to kitchen staff.</li>
-                        <li data-i18n="careers.role.resp_4">Maintain detailed service logs and report on hardware performance.</li>
+                        <li data-i18n="careers.role.resp_2">Diagnose technical issues and perform repairs to minimize
+                            downtime.</li>
+                        <li data-i18n="careers.role.resp_3">Provide training and technical support to kitchen staff.
+                        </li>
+                        <li data-i18n="careers.role.resp_4">Maintain detailed service logs and report on hardware
+                            performance.</li>
                     </ul>
                 </div>
 
                 <div class="job-benefits" style="margin-bottom: 40px;">
-                    <h3 data-i18n="careers.benefits_title" style="font-size: 20px; color: #333; margin-bottom: 15px;">Benefits</h3>
+                    <h3 data-i18n="careers.benefits_title" style="font-size: 20px; color: #333; margin-bottom: 15px;">
+                        Benefits</h3>
                     <div
                         style="display: grid; grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); gap: 15px;">
                         <span class="benefit-tag" data-i18n="careers.benefit_1">Tuition reimbursement</span>
@@ -510,7 +545,8 @@
                 </div>
             </div>
             <div class="copyright">
-                <span style="font-family: sans-serif;">©</span><span data-i18n="footer.copyright">2026 Panshaker Inc. All Rights Reserved.</span> <br>
+                <span style="font-family: sans-serif;">©</span><span data-i18n="footer.copyright">2026 Panshaker Inc.
+                    All Rights Reserved.</span> <br>
                 <span data-i18n="footer.tagline">聚焦北美市场的餐饮自动化基础设施服务商</span>
             </div>
         </div>
