--- a/profile_unknown.html
+++ b/profile_unknown.html
@@ -156,9 +156,10 @@
         }
 
         .profile-header h1 {
-            font-size: 48px;
+            font-family: 'MyBrandFont', sans-serif;
+            font-size: 36px;
             color: #0E427E;
-            margin-bottom: 10px;
+            margin-bottom: 5px;
             font-weight: 600;
         }
 
@@ -305,7 +306,8 @@
                 </div>
             </div>
             <div class="copyright">
-                <span style="font-family: sans-serif;">©</span><span data-i18n="footer.copyright">2026 Panshaker Inc. All Rights Reserved.</span> <br>
+                <span style="font-family: sans-serif;">©</span><span data-i18n="footer.copyright">2026 Panshaker Inc.
+                    All Rights Reserved.</span> <br>
                 <span data-i18n="footer.tagline">聚焦北美市场的餐饮自动化基础设施服务商</span>
             </div>
         </div>
