--- a/profile_xu.html
+++ b/profile_xu.html
@@ -155,8 +155,16 @@
             font-size: 12px;
         }
 
+        .profile-name {
+            font-family: 'MyBrandFont', sans-serif;
+            font-size: 36px;
+            color: #0E427E;
+            margin-bottom: 5px;
+            font-weight: 600;
+        }
+
         .profile-header h1 {
-            font-size: 48px;
+            font-size: 36px;
             color: #0E427E;
             margin-bottom: 10px;
             font-weight: 600;
@@ -279,7 +287,8 @@
         <div class="profile-content">
             <p data-i18n="profile.xu.p1">徐浩然，美国华盛顿大学工程系博士，美国华盛顿大学电气工程系硕士学位，美国俄亥俄州立大学数学系学士学位，卡塔尔美国西北大学电影系学士。</p>
 
-            <p data-i18n="profile.xu.p2">在创办伴勺科技之前，徐浩然在2023年创办了爱迪卜咨询公司。徐浩然曾在2022-2025年期间在中国三星电子，罗姆半导体（中国）和现代汽车（奥特奥博）实习，担任软件工程师实习。徐浩然在2025年在北京恒都律师事务所实习，担任专利代理实习。徐浩然在2025年10月起担任美国俄亥俄大学计算机系研究助理。
+            <p data-i18n="profile.xu.p2">
+                在创办伴勺科技之前，徐浩然在2023年创办了爱迪卜咨询公司。徐浩然曾在2022-2025年期间在中国三星电子，罗姆半导体（中国）和现代汽车（奥特奥博）实习，担任软件工程师实习。徐浩然在2025年在北京恒都律师事务所实习，担任专利代理实习。徐浩然在2025年10月起担任美国俄亥俄大学计算机系研究助理。
             </p>
         </div>
     </div>
@@ -298,7 +307,7 @@
                 <div class="footer-col">
                     <h4 data-i18n="footer.tech">技术支持</h4>
                     <ul>
-                    <li><a href="#" data-i18n="footer.synapse">Synapse OS</a></li>
+                        <li><a href="#" data-i18n="footer.synapse">Synapse OS</a></li>
                         <li><a href="#" data-i18n="footer.hardware">硬件改造方案</a></li>
                         <li><a href="#" data-i18n="footer.support">售后服务</a></li>
                     </ul>
@@ -312,7 +321,8 @@
                 </div>
             </div>
             <div class="copyright">
-                <span style="font-family: sans-serif;">©</span><span data-i18n="footer.copyright">2026 Panshaker Inc. All Rights Reserved.</span> <br>
+                <span style="font-family: sans-serif;">©</span><span data-i18n="footer.copyright">2026 Panshaker Inc.
+                    All Rights Reserved.</span> <br>
                 <span data-i18n="footer.tagline">聚焦北美市场的餐饮自动化基础设施服务商</span>
             </div>
         </div>
