--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
         }
 
         .hero-content h1 {
-            font-size: clamp(42px, 6vw, 64px);
+            font-size: clamp(32px, 5vw, 48px);
             font-weight: 200;
             margin-bottom: 26px;
             letter-spacing: 0.5px;
-            line-height: 1.15;
+            line-height: 1.25;
             max-width: 960px;
             margin-left: auto;
             margin-right: auto;
@@ -63,16 +63,17 @@
         .hero-content h1 strong {
             font-weight: 700;
             display: block;
-            margin-top: 8px;
-            font-size: clamp(50px, 7vw, 74px);
+            margin-top: 12px;
+            font-size: clamp(38px, 6vw, 56px);
             color: #0E427E;
         }
 
         .hero-content p {
-            font-size: clamp(18px, 3vw, 24px);
+            font-size: clamp(16px, 2vw, 18px);
             color: #666;
-            margin-bottom: 36px;
+            margin-bottom: 40px;
             font-weight: 300;
+            line-height: 1.8;
             max-width: 820px;
             margin-left: auto;
             margin-right: auto;
@@ -93,17 +94,17 @@
         }
 
         .philosophy h2 {
-            font-size: 56px;
-            margin-bottom: 40px;
+            font-size: 44px;
+            margin-bottom: 30px;
             font-weight: 600;
             letter-spacing: -1px;
             color: #0E427E;
         }
 
         .philosophy p {
-            font-size: 22px;
+            font-size: 18px;
             color: #666;
-            max-width: 900px;
+            max-width: 800px;
             margin: 0 auto;
             line-height: 1.9;
             font-weight: 300;
@@ -133,7 +134,7 @@
             direction: rtl;
         }
 
-        .split-section:nth-child(even) > * {
+        .split-section:nth-child(even)>* {
             direction: ltr;
         }
 
@@ -160,16 +161,16 @@
         }
 
         .split-text h3 {
-            font-size: 48px;
-            margin-bottom: 30px;
+            font-size: 36px;
+            margin-bottom: 24px;
             font-weight: 600;
-            letter-spacing: -1px;
+            letter-spacing: -0.5px;
         }
 
         .split-text p {
-            font-size: 20px;
+            font-size: 18px;
             color: #666;
-            margin-bottom: 20px;
+            margin-bottom: 24px;
             line-height: 1.8;
         }
 
@@ -204,14 +205,14 @@
         }
 
         .brand-logo {
-            font-size: 48px;
+            font-size: 40px;
             font-weight: 900;
             color: #d32f2f;
             margin-bottom: 15px;
         }
 
         .brand-slogan {
-            font-size: 22px;
+            font-size: 18px;
             color: #0E427E;
             font-style: italic;
             font-weight: 300;
@@ -225,8 +226,8 @@
         }
 
         .esg-section h2 {
-            font-size: 48px;
-            margin-bottom: 30px;
+            font-size: 36px;
+            margin-bottom: 24px;
             color: #0E427E;
             font-weight: 600;
             letter-spacing: -0.5px;
@@ -236,7 +237,7 @@
             color: #666;
             max-width: 700px;
             margin: 0 auto 40px;
-            font-size: 20px;
+            font-size: 18px;
             line-height: 1.8;
         }
 
@@ -306,11 +307,11 @@
         /* Tablet & iPad (768px - 1024px) */
         @media (max-width: 1024px) and (min-width: 769px) {
             .hero-content h1 {
-                font-size: 60px;
+                font-size: 44px;
             }
 
             .hero-content h1 strong {
-                font-size: 66px;
+                font-size: 50px;
             }
 
             .split-section {
@@ -318,12 +319,13 @@
             }
 
             .split-text h3 {
-                font-size: 40px;
+                font-size: 32px;
             }
         }
 
         /* Mobile & iPhone (< 768px) */
         @media (max-width: 768px) {
+
             /* 导航优化 - iPhone & 微信浏览器 */
             header {
                 height: auto;
@@ -368,19 +370,19 @@
             }
 
             .hero-content h1 {
-                font-size: 36px !important;
-                line-height: 1.25;
+                font-size: 32px !important;
+                line-height: 1.3;
                 margin-bottom: 20px;
                 letter-spacing: 0;
             }
 
             .hero-content h1 strong {
-                font-size: 42px !important;
-                margin-top: 8px;
+                font-size: 38px !important;
+                margin-top: 10px;
             }
 
             .hero-content p {
-                font-size: 18px;
+                font-size: 16px;
                 line-height: 1.6;
                 padding: 0 10px;
                 margin-bottom: 30px;
@@ -410,12 +412,12 @@
 
             /* 核心理念区 */
             .philosophy h2 {
-                font-size: 32px;
+                font-size: 28px;
                 padding: 0 20px;
             }
 
             .philosophy p {
-                font-size: 17px;
+                font-size: 16px;
                 padding: 0 20px;
                 line-height: 1.7;
             }
@@ -438,12 +440,12 @@
             }
 
             .split-text h3 {
-                font-size: 32px !important;
-                margin-bottom: 20px;
+                font-size: 28px !important;
+                margin-bottom: 16px;
             }
 
             .split-text p {
-                font-size: 17px !important;
+                font-size: 16px !important;
                 line-height: 1.7;
             }
 
@@ -464,12 +466,12 @@
             }
 
             .brand-slogan {
-                font-size: 18px;
+                font-size: 16px;
             }
 
             /* ESG区域 */
             .esg-section h2 {
-                font-size: 28px;
+                font-size: 24px;
                 padding: 0 20px;
             }
 
@@ -537,34 +539,34 @@
         /* iPhone SE / Small phones (< 375px) */
         @media (max-width: 374px) {
             .hero-content h1 {
-                font-size: 32px !important;
-            }
-
-            .hero-content h1 strong {
-                font-size: 36px !important;
-            }
-
-            .split-text h3 {
                 font-size: 28px !important;
             }
 
+            .hero-content h1 strong {
+                font-size: 32px !important;
+            }
+
+            .split-text h3 {
+                font-size: 24px !important;
+            }
+
             .philosophy h2 {
-                font-size: 28px;
+                font-size: 24px;
             }
         }
 
         /* iPhone 12/13/14 Pro Max & Large phones (> 414px) */
         @media (min-width: 415px) and (max-width: 768px) {
             .hero-content h1 {
-                font-size: 40px !important;
+                font-size: 36px !important;
             }
 
             .hero-content h1 strong {
-                font-size: 48px !important;
+                font-size: 42px !important;
             }
 
             .split-text h3 {
-                font-size: 36px !important;
+                font-size: 32px !important;
             }
 
             .split-img {
@@ -574,18 +576,21 @@
 
         /* 微信浏览器特殊优化 */
         @media screen and (max-width: 768px) {
+
             /* 防止微信浏览器缩放 */
             body {
                 font-size: 16px;
             }
 
             /* 优化微信内嵌浏览器的点击体验 */
-            a, button {
+            a,
+            button {
                 -webkit-tap-highlight-color: rgba(98, 186, 70, 0.2);
             }
 
             /* 微信浏览器input优化 */
-            input, textarea {
+            input,
+            textarea {
                 font-size: 16px;
             }
         }
@@ -759,9 +764,9 @@
 
         <div class="hero-content" style="position: relative; z-index: 1; pointer-events: none;">
             <h1 data-i18n-html="home.hero.title">AI 赋能下低人工成本<br><strong>商业中餐解决方案</strong></h1>
-            <p data-i18n="home.hero.subtitle" style="max-width: 800px; margin: 30px auto 40px; opacity: 0.9;">融合硬件自动化与 AI 智能系统，重新定义餐饮行业效率</p>
-            <a href="#"
-                data-i18n="home.hero.cta"
+            <p data-i18n="home.hero.subtitle" style="max-width: 800px; margin: 30px auto 40px; opacity: 0.9;">融合硬件自动化与
+                AI 智能系统，重新定义餐饮行业效率</p>
+            <a href="#" data-i18n="home.hero.cta"
                 style="display:inline-block; padding: 16px 48px; background:#62BA46; color:#fff; border-radius:30px; font-size:17px; pointer-events: auto; font-weight: 500; box-shadow: 0 8px 24px rgba(98, 186, 70, 0.3); transition: all 0.4s;"
                 onmouseenter="this.style.background='#0E427E'; this.style.transform='translateY(-3px)'; this.style.boxShadow='0 12px 32px rgba(14, 66, 126, 0.4)'"
                 onmouseleave="this.style.background='#62BA46'; this.style.transform='translateY(0)'; this.style.boxShadow='0 8px 24px rgba(98, 186, 70, 0.3)'">
@@ -786,13 +791,16 @@
             <div class="split-section">
                 <div class="split-text">
                     <h3 data-i18n="home.solution.price_title">竞品价格 1/2</h3>
-                    <p data-i18n-html="home.solution.price_desc" style="font-size: 22px; color: #333; font-weight: 500; line-height: 1.6;">&lt; 2周 低成本改装<br>实现无人化烹饪</p>
+                    <p data-i18n-html="home.solution.price_desc"
+                        style="font-size: 22px; color: #333; font-weight: 500; line-height: 1.6;">&lt; 2周
+                        低成本改装<br>实现无人化烹饪</p>
                 </div>
                 <!-- Hardware Image Area -->
                 <div class="split-img" style="background: transparent; padding: 0; overflow: hidden;">
                     <div
                         style="width: 100%; height: 100%; background: #f9f9f9; display: flex; align-items: center; justify-content: center; overflow: hidden; border-radius: 20px;">
-                        <img src="assets/images/product.jpg" alt="Product" style="width: 100%; height: 100%; object-fit: cover;" loading="lazy">
+                        <img src="assets/images/product.jpg" alt="Product"
+                            style="width: 100%; height: 100%; object-fit: cover;" loading="lazy">
                     </div>
                 </div>
             </div>
@@ -800,16 +808,16 @@
             <div class="split-section">
                 <div class="split-text">
                     <a href="synapse_os.html" style="display: inline-block; text-decoration: none;">
-                        <h3 style="cursor: pointer; transition: all 0.3s; display: inline-block;" 
+                        <h3 style="cursor: pointer; transition: all 0.3s; display: inline-block;"
                             data-i18n="home.solution.synapse_title"
                             onmouseenter="this.style.color='#0E427E'; this.style.transform='translateX(10px)'"
                             onmouseleave="this.style.color='inherit'; this.style.transform='translateX(0)'">
                             Synapse OS
                         </h3>
                     </a>
-                    <p data-i18n-html="home.solution.synapse_desc" style="font-size: 22px; line-height: 1.7;">下一代餐饮操作系统<br>打造中餐出海标准化一条龙服务</p>
-                    <a href="synapse_os.html"
-                        data-i18n="home.solution.learn_more"
+                    <p data-i18n-html="home.solution.synapse_desc" style="font-size: 22px; line-height: 1.7;">
+                        下一代餐饮操作系统<br>打造中餐出海标准化一条龙服务</p>
+                    <a href="synapse_os.html" data-i18n="home.solution.learn_more"
                         style="display: inline-block; margin-top: 25px; padding: 12px 28px; background: #0E427E; color: #fff; border-radius: 25px; font-size: 15px; transition: all 0.3s; box-shadow: 0 4px 12px rgba(14, 66, 126, 0.2);"
                         onmouseenter="this.style.background='#62BA46'; this.style.transform='translateY(-2px)'; this.style.boxShadow='0 6px 16px rgba(98, 186, 70, 0.3)'"
                         onmouseleave="this.style.background='#0E427E'; this.style.transform='translateY(0)'; this.style.boxShadow='0 4px 12px rgba(14, 66, 126, 0.2)'">
@@ -819,7 +827,8 @@
                 <div class="split-img" style="background: transparent; padding: 0; overflow: hidden;">
                     <div
                         style="width: 100%; height: 100%; background: #f9f9f9; display: flex; align-items: center; justify-content: center; overflow: hidden; border-radius: 20px;">
-                        <img src="assets/images/restaurant.jpg" alt="Restaurant" style="width: 100%; height: 100%; object-fit: cover;" loading="lazy">
+                        <img src="assets/images/restaurant.jpg" alt="Restaurant"
+                            style="width: 100%; height: 100%; object-fit: cover;" loading="lazy">
                     </div>
                 </div>
             </div>
@@ -861,7 +870,8 @@
                         style="width: 100%; height: 100%; object-fit: cover; object-position: top;">
                 </div>
                 <div class="ambassador-text">
-                    <p data-i18n-html="home.ambassador.line" style="font-size: 16px; color: #333; font-weight: 500; letter-spacing: 1px;">
+                    <p data-i18n-html="home.ambassador.line"
+                        style="font-size: 16px; color: #333; font-weight: 500; letter-spacing: 1px;">
                         高雷雷 <span class="mobile-hide-pipe" style="margin: 0 10px; color: #ccc;">|</span> 全球大使 <span
                             class="mobile-hide-pipe" style="margin: 0 10px; color: #ccc;">|</span> <span
                             class="ambassador-desc">前北京国安队队员，餐厅老板</span>
@@ -875,11 +885,9 @@
         <div class="container">
             <h2 data-i18n="home.esg.title">无声厨房计划</h2>
             <p data-i18n-html="home.esg.desc">赋能听障群体，创造包容性就业环境<br>用科技消除沟通障碍，让每个人都能发光发热</p>
-            <a href="#"
-                data-i18n="home.esg.cta"
+            <a href="#" data-i18n="home.esg.cta"
                 style="display:inline-block; padding: 12px 32px; color:#0E427E; border-radius:4px; font-size:16px; background: transparent; transition: all 0.3s; font-weight: 500; text-decoration: underline; text-underline-offset: 4px;"
-                onmouseenter="this.style.color='#62BA46'"
-                onmouseleave="this.style.color='#0E427E'">
+                onmouseenter="this.style.color='#62BA46'" onmouseleave="this.style.color='#0E427E'">
                 了解更多
             </a>
         </div>
@@ -913,7 +921,8 @@
                 </div>
             </div>
             <div class="copyright">
-                <span style="font-family: sans-serif;">©</span><span data-i18n="footer.copyright">2026 Panshaker Inc. All Rights Reserved.</span> <br>
+                <span style="font-family: sans-serif;">©</span><span data-i18n="footer.copyright">2026 Panshaker Inc.
+                    All Rights Reserved.</span> <br>
                 <span data-i18n="footer.tagline">聚焦北美市场的餐饮自动化基础设施服务商</span>
             </div>
         </div>
