--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
         }
 
         .page-banner h1 {
-            font-family: 'MyBrandFont', sans-serif;
+            font-family: 'Smartisan Compact', sans-serif;
             font-size: 44px;
             font-weight: normal;
             color: #fff;
@@ -178,42 +178,6 @@
         /* Mobile & iPhone Optimization (< 768px) */
         @media (max-width: 768px) {
 
-            /* 导航优化 */
-            header {
-                height: auto;
-                padding: 12px 0;
-            }
-
-            .nav-inner {
-                flex-direction: column;
-                gap: 12px;
-            }
-
-            .logo {
-                font-size: 22px;
-            }
-
-            .nav-links {
-                display: flex;
-                flex-wrap: wrap;
-                justify-content: center;
-                gap: 8px 16px;
-            }
-
-            .nav-links a {
-                margin: 0;
-                font-size: 13px;
-                padding: 6px 12px;
-                border-radius: 20px;
-                background: #f5f5f5;
-                transition: all 0.3s;
-            }
-
-            .nav-links a:active {
-                background: #e0e0e0;
-                transform: scale(0.95);
-            }
-
             /* Banner优化 */
             .page-banner {
                 padding-top: 160px;
@@ -267,11 +231,6 @@
         @media (max-width: 374px) {
             .page-banner h1 {
                 font-size: 32px !important;
-            }
-
-            .nav-links a {
-                font-size: 12px;
-                padding: 5px 10px;
             }
         }
 
