--- a/careers.html
+++ b/careers.html
@@ -44,7 +44,7 @@
         }
 
         .page-banner h1 {
-            font-family: 'MyBrandFont', sans-serif;
+            font-family: 'Smartisan Compact', sans-serif;
             font-size: 48px;
             font-weight: normal;
             margin-bottom: 20px;
@@ -254,29 +254,6 @@
 
         /* 响应式 */
         @media (max-width: 768px) {
-
-            /* 导航调整 */
-            header {
-                height: auto;
-                padding: 15px 0;
-            }
-
-            .nav-inner {
-                flex-direction: column;
-            }
-
-            .nav-links {
-                margin-top: 15px;
-                display: flex;
-                flex-wrap: wrap;
-                justify-content: center;
-            }
-
-            .nav-links a {
-                margin: 5px 12px;
-                font-size: 14px;
-                margin-left: 0;
-            }
 
             /* Hero 区域调整 */
             .hero {
