--- a/investors.html
+++ b/investors.html
@@ -20,10 +20,27 @@
         }
 
         @font-face {
-            font-family: 'MyFont';
-            src: url('assets/fonts/myfont.ttf') format('truetype');
-            font-weight: normal;
+            font-family: 'Smartisan Compact';
+            src: url('assets/fonts/Smartisan_Compact-Regular.ttf') format('truetype');
+            font-weight: 400;
             font-style: normal;
+            font-display: swap;
+        }
+
+        @font-face {
+            font-family: 'Smartisan Compact';
+            src: url('assets/fonts/Smartisan_Compact-Medium.ttf') format('truetype');
+            font-weight: 500;
+            font-style: normal;
+            font-display: swap;
+        }
+
+        @font-face {
+            font-family: 'Smartisan Compact';
+            src: url('assets/fonts/Smartisan_Compact-Bold.ttf') format('truetype');
+            font-weight: 700;
+            font-style: normal;
+            font-display: swap;
         }
 
         * {
@@ -33,7 +50,7 @@
         }
 
         body {
-            font-family: "MyFont", "PingFang SC", "Microsoft YaHei", sans-serif;
+            font-family: 'Smartisan Compact', -apple-system, BlinkMacSystemFont, "PingFang SC", "Microsoft YaHei", sans-serif;
             color: #333;
             background-color: #fcfcfc;
             line-height: 1.8;
