--- a/synapse_os.html
+++ b/synapse_os.html
@@ -12,10 +12,51 @@
     <!-- Fonts -->
     <style>
         @font-face {
-            font-family: 'MyBrandFont';
-            src: url('assets/fonts/myfont.ttf') format('truetype');
-            font-weight: normal;
+            font-family: 'Smartisan Compact';
+            src: url('assets/fonts/Smartisan_Compact-Thin.ttf') format('truetype');
+            font-weight: 100;
             font-style: normal;
+            font-display: swap;
+        }
+
+        @font-face {
+            font-family: 'Smartisan Compact';
+            src: url('assets/fonts/Smartisan_Compact-Light.ttf') format('truetype');
+            font-weight: 300;
+            font-style: normal;
+            font-display: swap;
+        }
+
+        @font-face {
+            font-family: 'Smartisan Compact';
+            src: url('assets/fonts/Smartisan_Compact-Regular.ttf') format('truetype');
+            font-weight: 400;
+            font-style: normal;
+            font-display: swap;
+        }
+
+        @font-face {
+            font-family: 'Smartisan Compact';
+            src: url('assets/fonts/Smartisan_Compact-Medium.ttf') format('truetype');
+            font-weight: 500;
+            font-style: normal;
+            font-display: swap;
+        }
+
+        @font-face {
+            font-family: 'Smartisan Compact';
+            src: url('assets/fonts/Smartisan_Compact-Bold.ttf') format('truetype');
+            font-weight: 700;
+            font-style: normal;
+            font-display: swap;
+        }
+
+        @font-face {
+            font-family: 'Smartisan Compact';
+            src: url('assets/fonts/Smartisan_Compact-Heavy.ttf') format('truetype');
+            font-weight: 900;
+            font-style: normal;
+            font-display: swap;
         }
 
         @font-face {
@@ -47,7 +88,7 @@
         }
 
         body {
-            font-family: 'MyBrandFont', "PingFang SC", "Microsoft YaHei", sans-serif;
+            font-family: 'Smartisan Compact', -apple-system, BlinkMacSystemFont, "PingFang SC", "Microsoft YaHei", sans-serif;
             background: #fff;
             color: var(--text-main);
             -webkit-font-smoothing: antialiased;
@@ -113,6 +154,11 @@
         .nav-links a:hover,
         .nav-links a.active {
             color: var(--brand-blue);
+        }
+
+        /* Hide hamburger on desktop */
+        .nav-toggle {
+            display: none;
         }
 
         /* Typography - Apple Scale */
@@ -279,7 +325,7 @@
         }
 
         .tier-gold h2 {
-            font-family: 'MyBrandFont', sans-serif;
+            font-family: 'Smartisan Compact', sans-serif;
             font-size: 44px;
             color: var(--gold);
             margin: 0 0 16px 0;
@@ -784,44 +830,113 @@
         /* Mobile Navigation Optimization */
         @media (max-width: 768px) {
             header {
-                height: auto;
-                padding: 15px 0;
+                height: 56px;
+                padding: 0;
             }
 
             .nav-inner {
-                flex-direction: column;
-                gap: 15px;
-                padding: 0 20px;
+                flex-direction: row;
+                gap: 0;
+                padding: 0 16px;
+                height: 100%;
             }
 
             .logo {
                 font-size: 20px;
             }
 
-            .nav-links {
+            /* Hamburger toggle — injected by JS */
+            .nav-toggle {
                 display: flex;
-                flex-wrap: wrap;
-                gap: 15px;
+                align-items: center;
                 justify-content: center;
+                width: 40px;
+                height: 40px;
+                background: none;
+                border: none;
+                cursor: pointer;
+                padding: 0;
+                -webkit-tap-highlight-color: transparent;
+                position: relative;
+                z-index: 1002;
+            }
+
+            .nav-toggle span {
+                display: block;
+                width: 20px;
+                height: 2px;
+                background: #333;
+                border-radius: 1px;
+                transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+                position: relative;
+            }
+
+            .nav-toggle span::before,
+            .nav-toggle span::after {
+                content: '';
+                display: block;
+                width: 20px;
+                height: 2px;
+                background: #333;
+                border-radius: 1px;
+                position: absolute;
+                left: 0;
+                transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+            }
+
+            .nav-toggle span::before { top: -6px; }
+            .nav-toggle span::after { top: 6px; }
+
+            header.nav-open .nav-toggle span { background: transparent; }
+            header.nav-open .nav-toggle span::before { top: 0; transform: rotate(45deg); }
+            header.nav-open .nav-toggle span::after { top: 0; transform: rotate(-45deg); }
+
+            .nav-links {
+                position: fixed;
+                top: 56px;
+                left: 0;
+                right: 0;
+                bottom: 0;
+                background: rgba(255, 255, 255, 0.98);
+                backdrop-filter: blur(20px);
+                -webkit-backdrop-filter: blur(20px);
+                flex-direction: column;
+                align-items: stretch;
+                justify-content: flex-start;
+                padding: 24px 24px 40px;
+                gap: 0;
+                display: none;
+                overflow-y: auto;
+                z-index: 1001;
+            }
+
+            header.nav-open .nav-links {
+                display: flex;
             }
 
             .nav-links a {
                 margin: 0;
-                font-size: 12px;
+                font-size: 17px;
+                font-weight: 500;
+                color: #1d1d1f;
+                padding: 16px 0;
+                border-bottom: 1px solid rgba(0, 0, 0, 0.06);
             }
 
+            .nav-links a:last-of-type {
+                border-bottom: none;
+            }
+
+            #ps-lang-switcher {
+                margin-left: 0 !important;
+                margin-top: 16px;
+                padding-top: 16px;
+                border-top: 1px solid rgba(0, 0, 0, 0.06);
+            }
         }
 
         /* Extra Small Mobile Devices */
         @media (max-width: 480px) {
-            .nav-links {
-                gap: 15px;
-            }
-
-            .nav-links a {
-                font-size: 12px;
-            }
-
             .logo span {
                 font-size: 18px !important;
             }
@@ -1241,7 +1356,7 @@
                         <div
                             style="display: flex; align-items: center; gap: 12px; margin-bottom: 24px; padding-bottom: 20px; border-bottom: 1px solid rgba(0,0,0,0.08);">
                             <div
-                                style="width: 40px; height: 40px; background: var(--brand-blue); border-radius: 50%; display: flex; align-items: center; justify-content: center; color: var(--bg-light); font-weight: 600; font-size: 16px; font-family: 'MyBrandFont', sans-serif;">
+                                style="width: 40px; height: 40px; background: var(--brand-blue); border-radius: 50%; display: flex; align-items: center; justify-content: center; color: var(--bg-light); font-weight: 600; font-size: 16px; font-family: 'Smartisan Compact', sans-serif;">
                                 AI
                             </div>
                             <div>
