--- a/profile_sun.html
+++ b/profile_sun.html
@@ -29,7 +29,7 @@
         }
 
         body {
-            font-family: "PingFang SC", "Microsoft YaHei", sans-serif;
+            font-family: 'Smartisan Compact', -apple-system, BlinkMacSystemFont, "PingFang SC", "Microsoft YaHei", sans-serif;
             color: #333;
             background-color: #fff;
             line-height: 1.8;
@@ -209,22 +209,6 @@
         }
 
         @media (max-width: 768px) {
-            .nav-inner {
-                flex-direction: column;
-            }
-
-            .nav-links {
-                margin-top: 15px;
-                display: flex;
-                flex-wrap: wrap;
-                justify-content: center;
-            }
-
-            .nav-links a {
-                margin: 5px 12px;
-                margin-left: 0;
-            }
-
             .footer-content {
                 flex-direction: column;
                 text-align: center;
