--- a/profile_xu.html
+++ b/profile_xu.html
@@ -28,7 +28,7 @@
         }
 
         body {
-            font-family: "PingFang SC", "Microsoft YaHei", sans-serif;
+            font-family: 'Smartisan Compact', -apple-system, BlinkMacSystemFont, "PingFang SC", "Microsoft YaHei", sans-serif;
             color: #333;
             background-color: #fff;
             line-height: 1.8;
@@ -156,7 +156,7 @@
         }
 
         .profile-name {
-            font-family: 'MyBrandFont', sans-serif;
+            font-family: 'Smartisan Compact', sans-serif;
             font-size: 36px;
             color: #0E427E;
             margin-bottom: 5px;
@@ -217,22 +217,6 @@
         }
 
         @media (max-width: 768px) {
-            .nav-inner {
-                flex-direction: column;
-            }
-
-            .nav-links {
-                margin-top: 15px;
-                display: flex;
-                flex-wrap: wrap;
-                justify-content: center;
-            }
-
-            .nav-links a {
-                margin: 5px 12px;
-                margin-left: 0;
-            }
-
             .footer-content {
                 flex-direction: column;
                 text-align: center;
