--- a/profile_xu.html
+++ b/profile_xu.html
@@ -305,7 +305,7 @@
                 </div>
             </div>
             <div class="copyright">
-                <span style="font-family: sans-serif;">©</span><span data-i18n="footer.copyright">2026 Panshaker Inc.
+                <span style="font-family: Arial, Helvetica, sans-serif; font-size: 14px; vertical-align: baseline;">©</span><span data-i18n="footer.copyright">2026 Panshaker Inc.
                     All Rights Reserved.</span> <br>
                 <span data-i18n="footer.tagline">聚焦北美市场的餐饮自动化基础设施服务商</span>
             </div>
