--- a/synapse_os.html
+++ b/synapse_os.html
@@ -1880,7 +1880,7 @@
             <!-- Copyright -->
             <div style="border-top: 1px solid #d2d2d7; padding-top: 20px; text-align: center;">
                 <p style="font-size: 12px; color: #86868b;">
-                    <span style="font-family: sans-serif;">©</span> 2026 Synapse OS. All rights reserved.
+                    <span style="font-family: Arial, Helvetica, sans-serif; font-size: 14px; vertical-align: baseline;">©</span> 2026 Synapse OS. All rights reserved.
                 </p>
                 <p style="font-size: 12px; color: #86868b; margin-top: 10px;">
                     Designed for <a href="index.html" style="color: var(--brand-blue);">Panshaker Services</a>
