--- a/careers.html
+++ b/careers.html
@@ -407,7 +407,7 @@
 
     <section class="section" style="padding-top: 150px; background: #fafafa;">
         <div class="container">
-            <h1 data-i18n="careers.heading"
+            <h1
                 style="text-align: center; font-size: 36px; font-weight: 300; margin-bottom: 60px; color: #0E427E;">Join
                 Our Team</h1>
 
@@ -415,21 +415,21 @@
                 style="background: #fff; padding: 40px; border-radius: 12px; box-shadow: 0 4px 20px rgba(0,0,0,0.05); max-width: 900px; margin: 0 auto;">
                 <div class="job-header"
                     style="margin-bottom: 30px; border-bottom: 1px solid #eee; padding-bottom: 20px;">
-                    <h2 data-i18n="careers.role.title" style="font-size: 32px; color: #0E427E; margin-bottom: 10px;">
+                    <h2 style="font-size: 32px; color: #0E427E; margin-bottom: 10px;">
                         Lead Field Service Technician</h2>
                     <p style="font-size: 18px; color: #666; display: flex; flex-wrap: wrap; gap: 20px;">
-                        <span data-i18n="careers.role.location"><strong style="color:#333;">Location:</strong> Seattle,
+                        <span><strong style="color:#333;">Location:</strong> Seattle,
                             WA</span>
-                        <span data-i18n="careers.role.salary"><strong style="color:#333;">Salary:</strong> $79,000 -
+                        <span><strong style="color:#333;">Salary:</strong> $79,000 -
                             $98,800 a year</span>
-                        <span data-i18n="careers.role.type"><strong style="color:#333;">Type:</strong> Full-time</span>
+                        <span><strong style="color:#333;">Type:</strong> Full-time</span>
                     </p>
                 </div>
 
                 <div class="job-description" style="margin-bottom: 40px;">
-                    <h3 data-i18n="careers.role.overview_title"
+                    <h3
                         style="font-size: 20px; color: #333; margin-bottom: 15px;">Role Overview</h3>
-                    <p data-i18n="careers.role.overview_desc"
+                    <p
                         style="color: #666; margin-bottom: 20px; font-size: 16px;">
                         Panshaker Services is seeking a dedicated Lead Field Service Technician to ensure the
                         reliability of our automated culinary systems. You will be responsible for the installation,
@@ -437,39 +437,39 @@
                         <strong>Valid work authorization in the US is required.</strong>
                     </p>
 
-                    <h3 data-i18n="careers.role.resp_title" style="font-size: 20px; color: #333; margin-bottom: 15px;">
+                    <h3 style="font-size: 20px; color: #333; margin-bottom: 15px;">
                         Key Responsibilities</h3>
                     <ul style="list-style: disc; margin-left: 20px; color: #666; margin-bottom: 20px; font-size: 16px;">
-                        <li data-i18n="careers.role.resp_1">Perform on-site installation, commissioning, and maintenance
+                        <li>Perform on-site installation, commissioning, and maintenance
                             of Panshaker automated cooking
                             units.</li>
-                        <li data-i18n="careers.role.resp_2">Diagnose technical issues and perform repairs to minimize
+                        <li>Diagnose technical issues and perform repairs to minimize
                             downtime.</li>
-                        <li data-i18n="careers.role.resp_3">Provide training and technical support to kitchen staff.
+                        <li>Provide training and technical support to kitchen staff.
                         </li>
-                        <li data-i18n="careers.role.resp_4">Maintain detailed service logs and report on hardware
+                        <li>Maintain detailed service logs and report on hardware
                             performance.</li>
                     </ul>
                 </div>
 
                 <div class="job-benefits" style="margin-bottom: 40px;">
-                    <h3 data-i18n="careers.benefits_title" style="font-size: 20px; color: #333; margin-bottom: 15px;">
+                    <h3 style="font-size: 20px; color: #333; margin-bottom: 15px;">
                         Benefits</h3>
                     <div
                         style="display: grid; grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); gap: 15px;">
-                        <span class="benefit-tag" data-i18n="careers.benefit_1">Tuition reimbursement</span>
-                        <span class="benefit-tag" data-i18n="careers.benefit_2">Parental leave</span>
-                        <span class="benefit-tag" data-i18n="careers.benefit_3">Health insurance</span>
-                        <span class="benefit-tag" data-i18n="careers.benefit_4">401(k) matching</span>
-                        <span class="benefit-tag" data-i18n="careers.benefit_5">Paid time off</span>
-                        <span class="benefit-tag" data-i18n="careers.benefit_6">Vision insurance</span>
-                        <span class="benefit-tag" data-i18n="careers.benefit_7">Health savings account</span>
-                        <span class="benefit-tag" data-i18n="careers.benefit_8">Dental insurance</span>
-                        <span class="benefit-tag" data-i18n="careers.benefit_9">Flexible spending account</span>
-                        <span class="benefit-tag" data-i18n="careers.benefit_10">Life insurance</span>
-                        <span class="benefit-tag" data-i18n="careers.benefit_11">Employee assistance program</span>
-                        <span class="benefit-tag" data-i18n="careers.benefit_12">Disability insurance</span>
-                        <span class="benefit-tag" data-i18n="careers.benefit_13">Paid holidays</span>
+                        <span class="benefit-tag">Tuition reimbursement</span>
+                        <span class="benefit-tag">Parental leave</span>
+                        <span class="benefit-tag">Health insurance</span>
+                        <span class="benefit-tag">401(k) matching</span>
+                        <span class="benefit-tag">Paid time off</span>
+                        <span class="benefit-tag">Vision insurance</span>
+                        <span class="benefit-tag">Health savings account</span>
+                        <span class="benefit-tag">Dental insurance</span>
+                        <span class="benefit-tag">Flexible spending account</span>
+                        <span class="benefit-tag">Life insurance</span>
+                        <span class="benefit-tag">Employee assistance program</span>
+                        <span class="benefit-tag">Disability insurance</span>
+                        <span class="benefit-tag">Paid holidays</span>
                     </div>
                     <style>
                         .benefit-tag {
@@ -485,7 +485,6 @@
 
                 <div style="text-align: center;">
                     <a href="mailto:contact@panshaker.com?subject=Application for Lead Field Service Technician - [Your Name]"
-                        data-i18n="careers.apply_cta"
                         style="display: inline-block; padding: 15px 40px; background: #62BA46; color: #fff; font-size: 18px; border-radius: 30px; font-weight: bold; transition: background 0.3s;">
                         Apply Now
                     </a>
@@ -522,7 +521,7 @@
                 </div>
             </div>
             <div class="copyright">
-                <span style="font-family: sans-serif;">©</span><span data-i18n="footer.copyright">2026 Panshaker Inc.
+                <span style="font-family: Arial, Helvetica, sans-serif; font-size: 14px; vertical-align: baseline;">©</span><span data-i18n="footer.copyright">2026 Panshaker Inc.
                     All Rights Reserved.</span> <br>
                 <span data-i18n="footer.tagline">聚焦北美市场的餐饮自动化基础设施服务商</span>
             </div>
